hello/static/css/main.css
@font-face {
  font-family: 'Flottflott';
  src: URL('../Flottflott.ttf') format('truetype');
}
@font-face {font-family: "Lichtspiele-Display";
    src: url("//db.onlinewebfonts.com/t/4ed55d54ba147b336d730a123cb0dea6.eot");
    src: url("//db.onlinewebfonts.com/t/4ed55d54ba147b336d730a123cb0dea6.eot?#iefix") format("embedded-opentype"),
    url("//db.onlinewebfonts.com/t/4ed55d54ba147b336d730a123cb0dea6.woff2") format("woff2"),
    url("//db.onlinewebfonts.com/t/4ed55d54ba147b336d730a123cb0dea6.woff") format("woff"),
    url("//db.onlinewebfonts.com/t/4ed55d54ba147b336d730a123cb0dea6.ttf") format("truetype"),
    url("//db.onlinewebfonts.com/t/4ed55d54ba147b336d730a123cb0dea6.svg#Lichtspiele-Display") format("svg");
}

html,body {
  height:100%;
  width:100%;
  margin: 0;
  color: #111;
  font-family: 'Lichtspiele-Display';
  font-size: 1em;
}
body:before {
  content: "";
  display: block;
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  z-index: -10;
  background-image: url('http://www.astrosurf.com/viladrich/astro/moon/closeup/Deslandres_C14-B1920-red-6Aug2015-3h52mnUT-300f.jpg');
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  filter: brightness(60%) sepia(100%);
  -webkit-filter: brightness(60%) sepia(100%);
}
.row { margin: 0; }
.full-page {
  height: 90vh;
  width: 100%;
  text-align: center;
}
.title-page, .half-page {
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
}
.title-page {
  background: #fefbf9;
}
.title-page::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-image: url('../images/img-noise.png');
  filter: brightness(33%);
  -webkit-filter: brightness(33%);
}
.logo {
  font-size: 5em;
  font-family: 'Flottflott';
  margin: 0 !important;
  line-height: 0.9em !important;
}
.icon {
  width: 200px;
}
.subtitle {
  font-size: 2.0em;
  transform: skew(-6deg);
  -webkit-transform: skew(-6deg);
  margin-top: 30px;
}
.logo, .subtitle {
  color: #dd1111;
}

/* Half Page */
.half-page {
  position: relative;
  height: 50vh;
  width: 100%;
  margin: 0;
  padding: 0;
}
.half-page p {
  color: #fff;
  font-size: 1.75em;
  width: 100%;
  padding: 0 10vw;
  line-height: 1em;
  font-weight: 400;
  letter-spacing: 0.05em;
  transform: skew(-6deg);
  -webkit-transform: skew(-6deg);
}


/* Team Page */
.team {
  background: #fff;
  height: auto;
  margin: 0;
  padding: 12vh 10vw;
  position: relative;
}

.member {
  text-align: center;
  margin: 3vh 0;
}
.member a {
  text-decoration: none;
  color: inherit;
}
.member h3 {
  text-transform: uppercase;
  font-size: 2.6em;
  color: #dd1111;
  letter-spacing: 0.05em;
  transform: skew(-6deg);
  -webkit-transform: skew(-6deg);
  margin: 5vh auto 0 auto;
  line-height: 0.6em;
}
.member p {
  font-size: 1.5em;
  letter-spacing: 0.02em;
  transform: skew(-6deg);
  -webkit-transform: skew(-6deg);
}
.pic {
  position: relative;
  height: 14vh;
  width: 14vh;
  margin: 0 auto;
  border-radius: 14vh;
  background-size: cover;
  border: 2px solid #f2f0ef;
  box-shadow: 0px 0px 0px 2px #dd1111;
  overflow: hidden;
}
.loren::after {
  content: '';
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0;
  left: 0;
  background-size: cover;
  background-image: url('../images/loren_sheets.jpg');
  -webkit-backface-visibility: hidden;
  transform: translateZ(0);
  -webkit-transform: translateZ(0);
}
.brantly::after {
  content: '';
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0;
  left: 0;
  background-size: cover;
  background-image: url('../images/BrantlyMillegan.jpeg');
  -webkit-backface-visibility: hidden;
  transform: translateZ(0);
  -webkit-transform: translateZ(0);
}
.kyle::after {
  content: '';
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0;
  left: 0;
  background-size: cover;
  background-image: url('../images/kylegilham.jpg');
  -webkit-backface-visibility: hidden;
  transform: translateZ(0);
  -webkit-transform: translateZ(0);
}
.nick::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background-size: cover;
  background-image: url('../images/nickgardetto.jpg');
  -webkit-backface-visibility: hidden;
  transform: translateZ(0);
  -webkit-transform: translateZ(0);
}


/* Specs Page */
.specs {
  /* display: none; */
  background: #eee9e7;
  padding: 12vh 8vw;
}
.baseline {
  margin: 0 auto 5vh auto;
  color: #444;
  text-align: center;
  transform: skew(-6deg);
  -webkit-transform: skew(-6deg);
}
.baseline h4 {
  font-size: 4.5em;
  letter-spacing: 0.03em;
  margin: 0;
  position: relative;
}
.baseline h4::before, .baseline h4::after {
  content: "";
  position: absolute;
  top: 50%;
  height: 2px;
  width: 20%;
  background: #ff7777;
}
.baseline h4::before {
  left: 5%;
}
.baseline h4::after {
  right: 5%;
}
.baseline p {
  font-size: 1.75em;
  margin: 0;
}
.spec {
  font-size: 2.15em;
  text-align: center;
}

/* Contact Page */
.contact {
  height: auto;
  width: 100%;
  text-align: center;
  padding: 10vh 0;
  background: #fff;
}
.contact .header {
  /* font-family: 'Flottflott'; */
  font-size: 3em;
  transform: skew(-6deg);
  -webkit-transform: skew(-6deg);
}
.contact .header::after {
  content: "";
  display: block;
  height: 0.4vh;
  width: 5vw;
  background: #111;
  margin: 2vh auto 4vh auto;
}
.contact .info {
  font-size: 2em;
  text-align: left;
  padding: 0 2vw;
}

.form-container {
  text-align: left;
  display: flex;
  flex-direction: row;
  justify-content: center;
  padding: 0 2vw;
}
.base-form {
  width: 100%;
  margin: 5vh 0;
}
.control-group {
  margin: 2vh auto;
}
.base-form label {
  color: #333;
  font-size: 2em;
  text-transform: uppercase;
  font-weight: 400;
  line-height: 0.5em;
  letter-spacing: 0.05em;
  transform: skew(-6deg);
  -webkit-transform: skew(-6deg);
}
.base-form input, .base-form textarea {
  width: 100%;
  margin: 0 0 1vh 0;
  background: rgba(75,75,75,0.35);
  border: none;
  font-size: 1.5em;
  padding-left: 8px;
}
.base-form textarea {
  max-height: 15vh;
}
.btn-success {
  font-size: 2em;
  font-family: 'Flottflott';
  background-color: #990000 !important;
  border: none;
  border-radius: 2px;
  width: 30% !important;
  transition: 0.1s;
  -webkit-transition: 0.1s;
}
.btn-success:hover {
  background-color: #FF0000 !important;
  transition: 0.1s;
  -webkit-transition: 0.1s;
}
.asteriskField {
    display: none;
}

footer {
  background: #fff;
  text-align: center;
  font-size: 1.0em;
  color: #999;
  border-top: 1px dotted #ccc;
}
footer p {
  margin: 0 !important;
}

